prettier husky lint-staged

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/anhdq1999/booking#readme",
   "lint-staged":{
-    "src/**/*.{js,json}":"prettier --single-quote --trailing-comma all --tab-width 4 --write"
+    "src/*.{js,json}":"prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "husky":{
     "hook":{
