--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "do an chuyen nganh",
   "main": "index.js",
   "scripts": {
+    "beautiful":"prettier --single-quote --trailing-comma all --tab-width 4 --write \"src/**/*.{js,json}\"",
     "start": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,10 +19,10 @@
   },
   "homepage": "https://github.com/anhdq1999/booking#readme",
   "lint-staged":{
-    "src/*.{js,json}":"prettier --single-quote --trailing-comma all --tab-width 4 --write"
+    "src/**/*.{js,json}":"prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "husky":{
-    "hook":{
+    "hooks":{
       "pre-commit":"lint-staged"
     }
   },
