--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "do an chuyen nganh",
   "main": "index.js",
   "scripts": {
-    "beautiful":"prettier --single-quote --trailing-comma all --tab-width 4 --write \"src/**/*.{js,json}\"",
+    "beautiful":"lint-staged",
     "start": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
