--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     }
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.9"
   },
   "devDependencies": {
     "husky": "^7.0.4",
