--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "booking_room",
   "version": "1.0.0",
   "description": "do an chuyen nganh",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "beautiful": "lint-staged",
-    "start": "nodemon --inspect index.js",
+    "beautiful": "prettier --single-quote --trailing-comma all --tab-width 4 --write \"src/**/*.{js,json}\"",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
