create models User, Role

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_USERNAME = booking_anhdq
 DB_PASSWORD = booking123
 DB_DATABASE = booking
 PORT = 5555
-
+DB_CONNECT = mongodb+srv://booking:booking123@cluster0.cc4og.mongodb.net/booking?retryWrites=true&w=majority
 ACCESS_TOKEN_SECRET = booking
