--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "mongoose-delete": "^0.5.4"
   },
   "devDependencies": {
     "husky": "^7.0.4",
