--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,8 @@
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.9",
-        "mongoose-delete": "^0.5.4"
+        "mongoose-delete": "^0.5.4",
+        "mongoose-slug-generator": "^1.0.4"
     },
     "devDependencies": {
         "husky": "^7.0.4",
