--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.9",
         "mongoose-delete": "^0.5.4",
-        "mongoose-slug-generator": "^1.0.4"
+        "mongoose-slug-generator": "^1.0.4",
+        "mongoose-slug-updater": "^3.3.0"
     },
     "devDependencies": {
         "husky": "^7.0.4",
