--- a/server/package.json
+++ b/server/package.json
@@ -34,13 +34,13 @@
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.9",
-        "mongoose-delete": "^0.5.4",
-        "mongoose-slug-generator": "^1.0.4",
-        "mongoose-slug-updater": "^3.3.0"
+        "mongoose-delete": "^0.5.4"
     },
     "devDependencies": {
         "husky": "^7.0.4",
         "lint-staged": "^12.3.7",
+        "mongoose-slug-generator": "^1.0.4",
+        "mongoose-slug-updater": "^3.3.0",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
         "prettier": "^2.6.1"
