--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.4.1",
+    "@cloudinary/url-gen": "^1.8.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@hookform/error-message": "^2.0.0",
@@ -11,7 +13,11 @@
     "@reduxjs/toolkit": "^1.8.1",
     "browserslist": "^4.20.2",
     "caniuse-lite": "^1.0.30001325",
+    "cloudinary": "^1.30.0",
+    "cloudinary-react": "^1.7.2",
     "dotenv": "^16.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "query-string": "^7.1.1",
     "react": "^16.12.0",
     "react-animated-slider": "^1.1.4",
