--- a/server/package.json
+++ b/server/package.json
@@ -29,12 +29,16 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "cloudinary": "^1.30.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "hanhchinhvn": "^1.4.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.9",
-        "mongoose-delete": "^0.5.4"
+        "mongoose-delete": "^0.5.4",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0"
     },
     "devDependencies": {
         "husky": "^7.0.4",
