--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,5 @@ CORS ="http://localhost:8080";
 CLOUDINARY_NAME="dmtwoqysj"
 CLOUDINARY_KEY="216382429154853"
 CLOUDINARY_SECRET="qvTi4QrZt4tehSyasEc_Pr7PTDo"
+MAIL_USERNAME=18130006@st.hcmuaf.edu.vn
+MAIL_PASSWORD=eotnzlyouweagmci
