--- a/server/package.json
+++ b/server/package.json
@@ -38,7 +38,8 @@
         "mongoose": "^6.2.9",
         "mongoose-delete": "^0.5.4",
         "multer": "^1.4.5-lts.1",
-        "multer-storage-cloudinary": "^4.0.0"
+        "multer-storage-cloudinary": "^4.0.0",
+        "nodemailer": "^6.7.7"
     },
     "devDependencies": {
         "husky": "^7.0.4",
