--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,18 @@
   "dependencies": {
     "@cloudinary/react": "^1.4.1",
     "@cloudinary/url-gen": "^1.8.0",
+    "@date-io/date-fns": "^2.14.0",
+    "@date-io/dayjs": "^2.14.0",
+    "@date-io/luxon": "^2.14.0",
+    "@date-io/moment": "^2.14.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.8",
+    "@mui/material": "^5.8.6",
+    "@mui/x-date-pickers-pro": "^5.0.0-alpha.7",
     "@reduxjs/toolkit": "^1.8.1",
     "browserslist": "^4.20.2",
     "caniuse-lite": "^1.0.30001325",
@@ -22,6 +30,7 @@
     "react": "^16.12.0",
     "react-animated-slider": "^1.1.4",
     "react-data-table-component": "^7.5.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^7.30.0",
     "react-image-lightbox": "^5.1.1",
