final register, verify, forgot, forgot-active, login

--- a/server/.env
+++ b/server/.env
@@ -12,3 +12,6 @@ CLOUDINARY_SECRET="qvTi4QrZt4tehSyasEc_Pr7PTDo"
 
 MAIL_USERNAME=18130006@st.hcmuaf.edu.vn
 MAIL_PASSWORD=eotnzlyouweagmci
+
+JWT_SECRET_KEY_FORGOT_PASS=forgot
+JWT_SECRET_KEY_VERIFY=verify
