--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-data-table-component": "^7.5.1",
     "react-dom": "^16.12.0",
     "react-hook-form": "^7.30.0",
+    "react-hooks-paginator": "^0.5.0",
     "react-image-lightbox": "^5.1.1",
     "react-redux": "^7.2.8",
     "react-rev-slider": "^1.0.1",
