--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,6 @@ MAIL_PASSWORD=eotnzlyouweagmci
 
 JWT_SECRET_KEY_FORGOT_PASS=forgot
 JWT_SECRET_KEY_VERIFY=verify
+
+PAYPAL_CLIENT_ID=AYUQLGOot0IXar0Drx0OeTYtza4IMJUq7T-SqMIcR3TFrfvpaE7z1nBM-NLTv6N_RGe4HiTSCJD-1KY7
+PAYPAL_PASSWORD=EE5pgtppfue5KPwHV2dCybxAg6018O2oGJ82sio0CmK9ezD5GQKoH-ffjwCDGeC7rOSZUoQl16c-AP9m
