--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.8",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.1",
     "browserslist": "^4.20.2",
     "caniuse-lite": "^1.0.30001325",
@@ -28,7 +29,7 @@
     "react-redux": "^7.2.8",
     "react-rev-slider": "^1.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.25.2",
     "reactstrap": "^8.10.1",
     "redux": "^4.1.2",
