create orders client

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triper",
-  "homepage": "https://triper.dexignlab.com/react/",
+  "homepage": "https://triper.dexignlab.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
