--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,7 @@ CLOUDINARY_SECRET="qvTi4QrZt4tehSyasEc_Pr7PTDo"
 
 PAYPAL_CLIENT_ID=AYUQLGOot0IXar0Drx0OeTYtza4IMJUq7T-SqMIcR3TFrfvpaE7z1nBM-NLTv6N_RGe4HiTSCJD-1KY7
 PAYPAL_PASS=
+
+
+PAYMENT_USER_DEMO=sb-sbkyc19427248@personal.example.com
+PAYMENT_USER_PASS=booking2022
