--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-polyfill-webpack-plugin": "^2.0.0",
     "query-string": "^7.1.1",
     "react": "^16.12.0",
     "react-animated-slider": "^1.1.4",
